Automata now read strings
instead of lists of chars

--- a/index.ipynb
+++ b/index.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "<ellipse fill=\"#000000\" stroke=\"#000000\" cx=\"23.4983\" cy=\"-175.7931\" rx=\"1.8\" ry=\"1.8\"/>\n",
        "</g>\n",
        "<!-- q0 -->\n",
-       "<g id=\"node2\" class=\"node\">\n",
+       "<g id=\"node3\" class=\"node\">\n",
        "<title>q0</title>\n",
        "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"23.4983\" cy=\"-117.4948\" rx=\"19.4965\" ry=\"19.4965\"/>\n",
        "<text text-anchor=\"middle\" x=\"23.4983\" y=\"-113.7948\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q0</text>\n",
@@ -82,26 +82,12 @@
        "<path fill=\"none\" stroke=\"#000000\" d=\"M23.4983,-173.8534C23.4983,-169.4969 23.4983,-158.4399 23.4983,-147.2617\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"26.9984,-147.1506 23.4983,-137.1507 19.9984,-147.1507 26.9984,-147.1506\"/>\n",
        "</g>\n",
-       "<!-- q0&#45;&gt;q0 -->\n",
-       "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>q0&#45;&gt;q0</title>\n",
-       "<path fill=\"none\" stroke=\"#000000\" d=\"M42.0201,-123.9663C51.95,-125.066 60.9965,-122.9089 60.9965,-117.4948 60.9965,-114.111 57.4627,-111.9995 52.3881,-111.1601\"/>\n",
-       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"52.0654,-107.6557 42.0201,-111.0233 51.973,-114.655 52.0654,-107.6557\"/>\n",
-       "<text text-anchor=\"middle\" x=\"71.4965\" y=\"-113.7948\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">a, b</text>\n",
-       "</g>\n",
        "<!-- q1 -->\n",
-       "<g id=\"node3\" class=\"node\">\n",
+       "<g id=\"node2\" class=\"node\">\n",
        "<title>q1</title>\n",
        "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"23.4983\" cy=\"-23.4983\" rx=\"19.4968\" ry=\"19.4968\"/>\n",
        "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"23.4983\" cy=\"-23.4983\" rx=\"23.4965\" ry=\"23.4965\"/>\n",
        "<text text-anchor=\"middle\" x=\"23.4983\" y=\"-19.7983\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">q1</text>\n",
-       "</g>\n",
-       "<!-- q0&#45;&gt;q1 -->\n",
-       "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>q0&#45;&gt;q1</title>\n",
-       "<path fill=\"none\" stroke=\"#000000\" d=\"M23.4983,-97.5606C23.4983,-85.9093 23.4983,-70.8917 23.4983,-57.4284\"/>\n",
-       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"26.9984,-57.0583 23.4983,-47.0584 19.9984,-57.0584 26.9984,-57.0583\"/>\n",
-       "<text text-anchor=\"middle\" x=\"26.9983\" y=\"-68.7965\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">a</text>\n",
        "</g>\n",
        "<!-- q1&#45;&gt;q1 -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
@@ -110,14 +96,28 @@
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"55.8506,-11.643 45.6992,-14.6762 55.5264,-18.6355 55.8506,-11.643\"/>\n",
        "<text text-anchor=\"middle\" x=\"75.4965\" y=\"-19.7983\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">a, b</text>\n",
        "</g>\n",
+       "<!-- q0&#45;&gt;q1 -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>q0&#45;&gt;q1</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M23.4983,-97.5606C23.4983,-85.9093 23.4983,-70.8917 23.4983,-57.4284\"/>\n",
+       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"26.9984,-57.0583 23.4983,-47.0584 19.9984,-57.0584 26.9984,-57.0583\"/>\n",
+       "<text text-anchor=\"middle\" x=\"26.9983\" y=\"-68.7965\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">a</text>\n",
+       "</g>\n",
+       "<!-- q0&#45;&gt;q0 -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>q0&#45;&gt;q0</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M42.0201,-123.9663C51.95,-125.066 60.9965,-122.9089 60.9965,-117.4948 60.9965,-114.111 57.4627,-111.9995 52.3881,-111.1601\"/>\n",
+       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"52.0654,-107.6557 42.0201,-111.0233 51.973,-114.655 52.0654,-107.6557\"/>\n",
+       "<text text-anchor=\"middle\" x=\"71.4965\" y=\"-113.7948\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">a, b</text>\n",
+       "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7ffb0cfb6748>"
+       "<graphviz.dot.Digraph at 0x7f9fac64d0b8>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -162,11 +162,11 @@
    ],
    "source": [
     "problems = [\n",
-    "    ([], False),\n",
-    "    (['a'], True),\n",
-    "    (['b'], False),\n",
-    "    (['b', 'b'], False),\n",
-    "    (['b', 'b', 'a', 'b', 'b'], True)\n",
+    "    ('', False),\n",
+    "    ('a', True),\n",
+    "    ('b', False),\n",
+    "    ('bb', False),\n",
+    "    ('bbabb', True)\n",
     "]\n",
     "for problem, solution in problems:\n",
     "    print(f'Word: \"{\"\".join(problem)}\", Output: {automaton1.read(problem)}, Expected: {solution}.')"
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -260,10 +260,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7ffb0cfccac8>"
+       "<graphviz.dot.Digraph at 0x7f9fac6af8d0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
