[bugfix] parsing order
Concatenation now binds stronger than +

--- a/index.ipynb
+++ b/index.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,10 +114,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fb9683b7908>"
+       "<graphviz.dot.Digraph at 0x7f1d077a5828>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -208,38 +208,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Major bug:** The `+` operator binds stronger than the concatenation. Therefore the following regular expression is parsed as `(a + b) b` rather than the intended `a + bb`. To obtain the latter, parse `a + (bb)` instead."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(a + b) b\n",
-      "a + b b\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(parse_regular_expression(\"a + bb\"))\n",
-    "print(parse_regular_expression(\"a + (bb)\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Residuals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -253,8 +227,7 @@
    "source": [
     "from fapy.algorithm_residual import residual\n",
     "\n",
-    "print(residual(parse_regular_expression(\"(a + (abb)) (bba)* c\"), \"abb\"))\n",
-    "print(residual(parse_regular_expression(\"(a + (abb)) (bba)* c\"), \"abb\"))"
+    "print(residual(parse_regular_expression(\"(a + abb) (bba)* c\"), \"abb\"))"
    ]
   },
   {
